force-app/main/default/objects/Customer_Interaction__b/fields/In_Game_Purchase__c.field-meta.xml
<CustomField>
    <fullName>In_Game_Purchase__c</fullName>
    <label>In Game Purchase</label>
    <length>16</length>
    <type>Text</type>
</CustomField>