force-app/main/default/objects/Customer_Interaction__b/fields/Level_Archived__c.field-meta.xml
<CustomField>
    <fullName>Level_Archived__c</fullName>
    <label>Level Archived</label>
    <length>16</length>
    <type>Text</type>
</CustomField>