force-app/main/default/objects/Customer_Interaction__b/fields/Lives_this_Game__c.field-meta.xml
<CustomField>
    <fullName>Lives_this_Game__c</fullName>
    <label>Lives this Game</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>