force-app/main/default/objects/Customer_Interaction__b/fields/Play_Date__c.field-meta.xml
<CustomField>
    <fullName>Play_Date__c</fullName>
    <label>Play Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>