force-app/main/default/objects/Customer_Interaction__b/fields/Score_this_Game__c.field-meta.xml
<CustomField>
    <fullName>Score_this_Game__c</fullName>
    <label>Score this Game</label>
    <length>16</length>
    <type>Text</type>
</CustomField>